log
barnsley.cpp: In member function ‘double** Barnsley::generate()’:
barnsley.cpp:19:31: error: ‘memset’ was not declared in this scope
     memset(xtab, '\0', 2000000);
                               ^
barnsley.cpp:27:24: error: ‘rand’ was not declared in this scope
         int los = rand() % 100;
                        ^
make: *** [barnsley.o] Błąd 1
